# src/app.js
@@ -1,19 +1,24 @@
 const express = require('express');
 const cors = require('cors');
+const cookieParser = require('cookie-parser');
+const createTables = require('./config/createTables');
 const { swaggerUi, specs  } = require('./swagger/swagger'); 
+require('dotenv').config();
+
+// Importando las rutas
 const authRoutes = require('./routes/authRoutes');
 const adminRoutes = require('./routes/adminRoutes');
 const studentRoutes = require('./routes/studentRoutes');
 const selfRoutes = require('./routes/selfRoutes');
 const laptopsRoutes = require('./routes/laptopRoutes');
 const reservationsRoutes = require('./routes/reservationRoutes');
-require('dotenv').config();
-const createTables = require('./config/createTables');
+const finesRoutes = require('./routes/fineRoutes');
 
 const app = express();
 
-// Cors
+// Middlewares
 app.use(cors());
+app.use(cookieParser());
 app.use(express.json());
 
 // Rutas
@@ -23,6 +28,7 @@ app.use('/api/students', studentRoutes);
 app.use('/api/self', selfRoutes);
 app.use('/api/laptops', laptopsRoutes);
 app.use('/api/reservations', reservationsRoutes);
+app.use('/api/fines', finesRoutes);
 
 //Swagger documentación
 app.use('/', swaggerUi.serve, swaggerUi.setup(specs));
@@ -31,10 +37,10 @@ app.use('/', swaggerUi.serve, swaggerUi.setup(specs));
 createTables();
 
 // Iniciar el servidor
-const PORT = process.env.PORT ?? 3001;
-const BASE_URL = process.env.BASE_URL ?? 3001;
+const PORT = process.env.PORT || 3000;
+const BASE_URL = process.env.BASE_URL || `http://localhost:${PORT}`;
 app.listen(PORT, () => {
-  console.log(`Servidor corriendo en el puerto ${BASE_URL}`);
+  console.log(`Servidor corriendo en ${BASE_URL}. Visitalo para leer la documentación.`);
 });
 
 
