# src/routes/authRoutes.js
@@ -1,6 +1,6 @@
 const express = require('express');
 const router = express.Router();
-const { sendCode, registerStudent, login } = require('../controllers/authController');
+const { sendCode, registerStudent, login, logout } = require('../controllers/authController');
 
 
 //registro (solo para registrar estudiantes)
@@ -8,5 +8,8 @@ router.post('/send-code', sendCode);
 router.post('/register-student', registerStudent);
 //inicio sesión
 router.post('/login', login);
+
+router.post('/logout', logout);
+
 
 module.exports = router;
